# gpgpt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/: polyscope.cmake  tinyad.cmake
gpgpt/: Events.h  GUIContext.cpp  ImGuiWidgets.h  MyConfig.cpp  MyConfig.h
results/L2_newton_rank1/circle_12_14_23_49/: config_curr.json  deltas_curr.bmom  dv_dirch_vec_100000.bdat  frames_100000.bfra
results/L2_newton_rank1/circle_12_15_0_14/: cv_curl_vec_curr.bdat  dv_dirch_vec_curr.bdat  nv_norms_vec_curr.bdat
results/L2_newton_rank1/circle_12_18_20_38/: config_100000.json
results/L2_newton_rank1/circle_12_20_19_44/: cm_curl_mom_curr.bdat
results/MiNT_krushkal_rank2/circle_1000_12_27_19_44/: cm_curl_mom_100000.bdat  deltas_100000.bmom  frames_100000.bfra  frames_100001.bfra  nv_norms_vec_100000.bdat  nv_norms_vec_curr.bdat
src/: AppState.cpp  AppState.h  FieldView.cpp  FieldView.h  FileParser.cpp  FileParser.h  PhysicsHook.h  Serialization.cpp  Serialization.h
src/ADWrapper/: ADFuncRunner.cpp  ADFuncRunner.h  ADFunc_TinyAD_Instance.h
src/CubeCover/: TetMeshConnectivity.cpp  TetMeshConnectivity.h
src/SurfaceFields/: CoverMesh.cpp  CoverMesh.h  CurlLocalIntegration.cpp  CurlLocalIntegration.h  FieldIntegration.h  FieldSurface.cpp  FieldSurface.h  GNGlobalIntegration.cpp  GNGlobalIntegration.h  GaussNewton.cpp  GaussNewton.h  GlobalFieldIntegration.h  MIGlobalIntegration.cpp  MIGlobalIntegration.h  Permutations.cpp  RoundVectorFields.cpp  RoundVectorFields.h  SpectralLocalIntegration.cpp  SpectralLocalIntegration.h  StripePatternIntegration.cpp  StripePatternIntegration.h  UpsampleSurfaceFields.cpp  UpsampleSurfaceFields.h  VectorFields2PolyVectors.cpp  VectorFields2PolyVectors.h  Weave.cpp  Weave.h
src/gpgpt_frontend/: AppState.cpp  AppState.h  FieldView.cpp  FieldView.h  FileParser.cpp  FileParser.h  GUIContext.cpp  GUIContext.h  ImGuiWidgets.cpp  Manifest.md  README.md
tools/01_basic_test/: CMakeLists.txt
tools/01_basic_test/src/: VizHook.h  imgui.ini  main.cpp
tools/02_tiny_ad_test/: CMakeLists.txt  README.md
tools/02_tiny_ad_test/src/: VizHook.h
tools/03_disk_bvp_v1/: CMakeLists.txt
tools/03_disk_bvp_v1/src/: VizHook.h
tools/04_adfunc_wrapper/: CMakeLists.txt
tools/04_adfunc_wrapper/src/: VizHook.h
tools/04_adfunc_wrapper/src/ADWrapper/: ADFuncRunner.h  ADFunc_TinyAD_Instance.h
tools/04_disk_bvp_adfunc_wrapper/: CMakeLists.txt
tools/04_disk_bvp_adfunc_wrapper/src/: VizHook.h
tools/04_disk_mint2d_v1/: CMakeLists.txt
tools/04_disk_mint2d_v1/src/: VizHook.h  main.cpp
tools/04_disk_mint2d_v1/src/mint2D/: Mint2DHook.cpp  Mint2DHook.h
tools/05_disk_gpgpt_v1/: CMakeLists.txt  GPT_MANIFEST_FILE.md  README.md
tools/05_disk_gpgpt_v1/src/: MiNT_krushkal_rank2.h  Solve_L2_newton_rank1.h  Solve_curl_proj.h  VizHook.h  main.cpp
tools/05_disk_gpgpt_v1/src/mint2D_gpgpt_hook/: ADFuncRunner.cpp  ADFuncRunner.h  ADFunc_TinyAD_Instance.h  AppState.cpp  AppState.h  ElementVarsTinyAD.h  FieldView.cpp  FieldView.h  FileParser.cpp  FileParser.h  ImGuiWidgets.cpp  ImGuiWidgets.h  Mint2DHook.cpp  Mint2DHook.h  Mint2DHook_prev.cpp  Mint2DHook_prev.h  MyConfig.cpp  MyConfig.h  OptZoo.h  Serialization.cpp  Serialization.h  UtilsMisc.h  VizCache.cpp
tools/06_polyvectors_tool/: CMakeLists.txt
tools/06_polyvectors_tool/src/: main.cpp
tools/07_mint3d_v1/: CMakeLists.txt  GPT_MANIFEST_FILE.md  README.md
tools/07_mint3d_v1/src/: MiNT_krushkal_rank2.h  MiNT_krushkal_rank3.h  MiNT_mesh.h  MiNT_pin_bound.h  MiNT_rank1.h  MiNT_rank1_virtual_boundary.h  MiNT_rank2_cylinder_example.h  Solve_L2_newton_rank1.h  main.cpp
tools/07_mint3d_v1/src/mint2D_gpgpt_hook/: AppState.h  ElementVarsTinyAD.h  ImGuiWidgets.h  Serialization.h  UtilsMisc.h
tools/07_mint3d_v1/src/mint3D_hook/: AppState.cpp  AppState.h  ElementVarsTinyAD.h  FieldView.h  FileParser.cpp  FileParser.h  ImGuiWidgets.cpp  ImGuiWidgets.h  LocalProjections.h  Mint2DHook.cpp  Mint3DHook.cpp  Mint3DHook.h  MyConfig.cpp  MyConfig.h  OptZoo.h  Serialization.cpp  Serialization.h
tools/08_surface_mint/: CMakeLists.txt
tools/08_surface_mint/src/: MiNT_krushkal_rank2.h
tools/08_surface_mint/src/surface_mint/: AppState.cpp  ElementVarsTinyAD.h  FieldView.cpp  FileParser.h  ImGuiWidgets.cpp  OptZoo.h  UtilsMisc.cpp
tools/shared/: cylinder3k.mesh  cylinder_400.mesh  debug_template.cpp  disk_3480_tets.mesh  disk_v1000.mesh  disk_v210.mesh  disk_v623.mesh  parallelogram_exact.mesh  tetrahedron.mesh
tools/t_04_disk_mint2d_v1/: CMakeLists.txt  README.md
tools/t_04_disk_mint2d_v1/src/mint2D/: Mint2DHook.cpp  VizHelper.h
